# rmua_opensource

./: README.en.md  README.md
node_code/mdvs_autoaim/: CMakeLists.txt  package.xml
node_code/mdvs_autoaim/include/mdvs_autoaim/: define.h
node_code/mdvs_autoaim/include/mdvs_autoaim/Armor/: armor.h
node_code/mdvs_autoaim/include/mdvs_autoaim/Armor/ArmorNum/: armor_num.cpp
node_code/mdvs_autoaim/include/mdvs_autoaim/Armor/ArmorPredict/: armor_predict.h
node_code/mdvs_autoaim/include/mdvs_autoaim/Armor/ArmorTrack/: armor_track.cpp
node_code/mdvs_autoaim/include/mdvs_autoaim/Armor/FindLightBar/: find_light_bar.cpp
node_code/mdvs_autoaim/include/mdvs_autoaim/Armor/RectangleMacth/: rectangle_match.cpp
node_code/mdvs_autoaim/include/mdvs_autoaim/Armor/number_detector/: svm.h
node_code/mdvs_autoaim/include/mdvs_autoaim/Others/Camera/: RMVideoCapture.hpp
node_code/mdvs_autoaim/include/mdvs_autoaim/Others/DataFrame/: data_frame.h
node_code/mdvs_autoaim/include/mdvs_autoaim/Others/SolvePosition/: angle_solver_params.xml  solve_position.h
node_code/mdvs_autoaim/include/mdvs_autoaim/Others/Trajectory/: trajectory.h
node_code/mdvs_autoaim/include/mdvs_autoaim/Run/: run.h
node_code/mdvs_autoaim/include/mdvs_autoaim/Rune/: Wind.hpp
node_code/mdvs_autoaim/include/mdvs_autoaim/Serials/: Serial.h
node_code/mdvs_autoaim/include/mdvs_autoaim/glog/: Makefile  config.status  demangle_unittest  libtool  logging_unittest  signalhandler_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest
node_code/mdvs_autoaim/include/mdvs_autoaim/glog/.libs/: demangle_unittest  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest
node_code/mdvs_autoaim/include/mdvs_autoaim/glog/autom4te.cache/: requests
node_code/mdvs_autoaim/src/: HEU_Vision_2020_MDVS.pro  define.h  main.cpp  setting.sh  startup.sh  startupBeforeStartup.sh
node_code/mdvs_autoaim/src/Armor/: armor.cpp
node_code/mdvs_autoaim/src/Armor/ArmorNum/: armor_num.cpp
node_code/mdvs_autoaim/src/Armor/ArmorPredict/: armor_predict.cpp
node_code/mdvs_autoaim/src/Armor/ArmorTrack/: armor_track.cpp
node_code/mdvs_autoaim/src/Armor/FindLightBar/: find_light_bar.cpp
node_code/mdvs_autoaim/src/Armor/RectangleMacth/: rectangle_match.cpp
node_code/mdvs_autoaim/src/Others/Camera/: RMVideoCapture.cpp
node_code/mdvs_autoaim/src/Others/DataFrame/: data_frame.cpp  data_frame.h
node_code/mdvs_autoaim/src/Others/General/: debug.h  opencv_owns.hpp
node_code/mdvs_autoaim/src/Others/SolvePosition/: solve_position.cpp
node_code/mdvs_autoaim/src/Others/Trajectory/: trajectory.cpp
node_code/mdvs_autoaim/src/Others/number_detector/: model.xml
node_code/mdvs_autoaim/src/Run/: run.cpp
node_code/mdvs_autoaim/src/Rune/: Wind.cpp  Wind.hpp
node_code/mdvs_autoaim/src/Rune/WindPredict/: wind_predict.cpp  wind_predict.hpp
node_code/mdvs_autoaim/src/Serials/: Serial.cpp  Serial.h
node_code/mdvs_autoaim/src/glog/: logging_striptest0  logging_striptest10  logging_striptest2  stacktrace_unittest  utilities_unittest
node_code/mdvs_autoaim/src/glog/.libs/: utilities_unittest
node_code/mdvs_autoaim/src/glog/lib/: libglog.la
node_code/mdvs_autoaim/src/glog/lib/pkgconfig/: libglog.pc
node_code/mdvs_autoaim/src/logger/: HEU_Vision_2020_MDVS.INFO
node_code/mdvs_autoaim/src/number_detector/: svm.cpp
node_code/move_control/: CMakeLists.txt
node_code/move_control/src/: move_control.cpp
node_code/port_listener_core/: CMakeLists.txt  package.xml  setup.py
node_code/port_listener_core/include/port_listener_core/: head.h
node_code/port_listener_core/include/port_listener_core/serial/: serial.h
node_code/port_listener_core/include/port_listener_core/serial/impl/: unix.h
node_code/port_listener_core/msg/: my_control_frame.msg  race_state.msg
node_code/port_listener_core/scripts/: robottcp.py
node_code/port_listener_core/src/: source.cpp  tcpcore.cpp
node_code/port_listener_core/src/src/: serial.cc
node_code/port_listener_core/src/src/impl/: unix.cc
node_code/port_listener_core/src/src/impl/list_ports/: list_ports_linux.cc
node_code/zimiaoshiyan/: CMakeLists.txt  package.xml
node_code/zimiaoshiyan/include/zimiaoshiyan/: define.h
node_code/zimiaoshiyan/include/zimiaoshiyan/Armor/: armor.h
node_code/zimiaoshiyan/include/zimiaoshiyan/Others/Camera/: RMVideoCapture.hpp
node_code/zimiaoshiyan/include/zimiaoshiyan/Others/DataFrame/: data_frame.h
node_code/zimiaoshiyan/include/zimiaoshiyan/Others/General/: opencv_owns.hpp
node_code/zimiaoshiyan/include/zimiaoshiyan/Others/SolvePosition/: solve_position.h
node_code/zimiaoshiyan/include/zimiaoshiyan/Run/: run.h
node_code/zimiaoshiyan/include/zimiaoshiyan/Rune/: Wind.hpp
node_code/zimiaoshiyan/include/zimiaoshiyan/Serials/: Serial.h
node_code/zimiaoshiyan/src/: main.cpp
node_code/zimiaoshiyan/src/Armor/: armor.cpp
node_code/zimiaoshiyan/src/Armor/ArmorNum/: armor_num.cpp
node_code/zimiaoshiyan/src/Armor/ArmorPredict/: armor_predict.cpp
node_code/zimiaoshiyan/src/Armor/ArmorTrack/: armor_track.cpp
node_code/zimiaoshiyan/src/Armor/FindLightBar/: find_light_bar.cpp
node_code/zimiaoshiyan/src/Armor/RectangleMacth/: rectangle_match.cpp
node_code/zimiaoshiyan/src/Others/Camera/: RMVideoCapture.cpp
node_code/zimiaoshiyan/src/Others/DataFrame/: data_frame.cpp
node_code/zimiaoshiyan/src/Others/SolvePosition/: angle_solver_params.xml  solve_position.cpp
node_code/zimiaoshiyan/src/Others/Trajectory/: trajectory.cpp
node_code/zimiaoshiyan/src/Run/: run.cpp
node_code/zimiaoshiyan/src/Rune/: Wind.cpp
node_code/zimiaoshiyan/src/Rune/KF_Python/: KF.ipynb  KF_Wind.ipynb
node_code/zimiaoshiyan/src/Rune/WindPredict/: wind_predict.cpp
node_code/zimiaoshiyan/src/Serials/: Serial.cpp
odom/: CMakeLists.txt  package.xml  setup.py
odom/include/odom/: Serial.h
odom/msg/: Posemsg.msg  velocity.msg
odom/scripts/: tcppublisher.py
odom/src/: Serial.cpp  odometry.cpp  portlistener.cpp
(+78 files in other folders)
